Fix scrollbar

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -5,6 +5,9 @@
     width: 100%;
     height: 100%;
 }
+.project-container::-webkit-scrollbar {
+    display: none;
+}
 
 .project-item {
     margin: 0 0 16px 0;
